--------------------
Bazaar Release Notes
--------------------

.. contents::

IN DEVELOPMENT
--------------

  CHANGES:

  IMPROVEMENTS:

    * ``bzr export`` can now export a subdirectory of a project.
      (Robert Collins)

  BUG FIXES:

    * ``bzr upgrade`` on remote branches accessed via bzr:// and
      bzr+ssh:// now works.  (Andrew Bennetts)

    * sftp transport: added missing ``FileExists`` case to
      ``_translate_io_exception`` (Christophe Troestler, #123475)

    * The help for ``bzr ignored`` now suggests ``bzr ls --ignored`` for
      scripting use. (Robert Collins, #3834)

    * The default ``annotate`` logic will now always assign the
      last-modified value of a line to one of the revisions that modified
      it, rather than a merge revision. This would happen when both sides
      claimed to have modified the line resulting in the same text. The
      choice is arbitrary but stable, so merges in different directions
      will get the same results.  (John Arbash Meinel, #232188)

    * ``WorkingTree4`` trees will now correctly report missing-and-new
      paths in the output of ``iter_changes``. (Robert Collins)

  API CHANGES:

    * Exporters now take 4 parameters. (Robert Collins)

    * ``Tree.iter_changes`` will now return False for the content change
      field when a file is missing in the basis tree and not present in
      the target tree. Previously it returned True unconditionally.
      (Robert Collins)

  INTERNALS:


bzr 1.6rc1 2008-08-06
---------------------

This release candidate for bzr 1.6 solidifies the new branch stacking
feature.  Bazaar now recommends that users upgrade all knit repositories,
because later formats are much faster.  However, we plan to continue read/write and
upgrade support for knit repostories for the forseeable future.  Several
other bugs and performance issues were fixed.

  CHANGES:

    * Knit format repositories are deprecated and bzr will now emit